small layout fixes

--- a/src/app/terco-home/terco-home.component.html
+++ b/src/app/terco-home/terco-home.component.html
@@ -1,11 +1,11 @@
-<div class="ui grid container">
-    <div class="eight wide column">
+<div class="ui stackable two column grid container">
+    <div class="column">
         <h1 class="ui header">Bem-vindo ao TerçoWEB</h1>
         <h2>Aqui você não vai ter desculpas pra não rezar por ter esquecido o terço físico</h2>
         <h3>Terço completo com contador de mistérios e orações, comentários e muito mais</h3>
         <button class="ui massive teal button" (click)="irParaoTerco()" style="box-shadow: 0px 0px 10px white;">Vamos rezar!</button>
     </div>
-    <div class="eight wide column">
+    <div class="column">
 
     </div>
 </div>
