--- a/src/app/terco-rezar/terco-rezar.component.html
+++ b/src/app/terco-rezar/terco-rezar.component.html
@@ -1,4 +1,4 @@
-<div class="ui grid center aligned segment" style="margin-top: -1%; background-color:mediumseagreen;color: white;">
+<div class="ui stackable center aligned two column grid segment" style="margin-top: -1%; background-color:mediumseagreen;color: white;">
   <div class="ui fifteen wide column" style="margin-top: 3%;margin-bottom: 2%;">
     <label style="font-size: 80px">{{oracaoTitulo}}</label>
   </div>
@@ -11,13 +11,15 @@
   </div>
 </div>
 
-<div class="ui equal width center aligned padded grid">
-  <div class="row">
-    <div class="ui column middle aligned" style="text-shadow:2px 2px 10px white;">
-      <app-terco-details [pMomento]="momento" [pOracaoContador]="oracaoContador" [pOracaoTotal]="oracaoTotal"
-        [pMisterio]="misterio">
-      </app-terco-details>
-    </div>
+<div class="ui stackable center aligned two column grid">
+
+  <div class="column" style="text-shadow:2px 2px 10px white;">
+    <app-terco-details [pMomento]="momento" [pOracaoContador]="oracaoContador" [pOracaoTotal]="oracaoTotal"
+      [pMisterio]="misterio">
+    </app-terco-details>
+  </div>
+
+  <div class="column">
     <h2 class="ui column">
       <div class="ui fluid raised card">
         <span class="content">
@@ -26,4 +28,5 @@
       </div>
     </h2>
   </div>
+
 </div>
