--- a/src/app/terco-sobre/terco-sobre.component.html
+++ b/src/app/terco-sobre/terco-sobre.component.html
@@ -29,7 +29,7 @@
       São Luís diz que <i>"É uma pena ver como a maior parte das pessoas rezam o Rosário. Rezam-no com uma precipitação
       espantosa, devoram até a maior parte das palavras. Não se cumprimentaria desse modo ridículo ao último dos homens, e
       no entanto se imagina que Jesus e Maria se sentem honrados com isso! ...."</i>
-      <br><a target="_blank" href="https://pt.wikipedia.org/wiki/Rosário_(catolicismo)">Fonte</a>
+      <br><a target="_blank" href="https://pt.wikipedia.org/wiki/Rosário_(catolicismo)">Saiba mais</a>
     </h4>
   </div>
 
@@ -38,7 +38,7 @@
       Sobre este site
     </h2>
     <h4>
-      Desenvolvido com muito carinho por <b>Matheus Moreira</b>
+      Desenvolvido com muito carinho por <b>Matheus Moreira</b><i class="heart icon" style="color: firebrick"></i>
       <br>
       <a target="_blank" href="mailto:imatheusmoreiragmail.com"><i class="mail icon"></i>Fale comigo</a>
       &nbsp;&nbsp;
