--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,12 @@
 </div>
 <div class="ui fluid container" style="background-image: linear-gradient(to top, rgba(255,0,0,0), aquamarine);">
   <router-outlet></router-outlet>
+  <div id="botaoFlutuante">
+    <div class="fabs">
+      <a routerLink="/sobre" class="fab orange" tooltip="Sobre"><i class="question icon"></i></a>
+      <a routerLink="/rezar" class="fab light-blue" tooltip="Rezar o Terço"><i class="play icon"></i></a>
+      <a routerLink="/home" class="fab indigo" tooltip="Início"><i class="home icon"></i></a>
+      <a target="_blank" class="fab red" tooltip="Opções"><i class="bars icon"></i></a>
+    </div>
+  </div>
 </div>
