--- a/src/app/terco-details/terco-details.component.html
+++ b/src/app/terco-details/terco-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="momento == 1">
   <div class="ui statistic">
     <div class="value">
-      Preparação para o terço
+      Prepara&shy;ção para o terço
     </div>
     <div class="label">
       Momento
@@ -12,7 +12,7 @@
 <div *ngIf="momento == 2">
   <div class="ui statistic">
     <div class="value">
-      Oferecimento do Terço
+      Ofereci&shy;mento do Terço
     </div>
     <div class="label">
       Momento
@@ -23,7 +23,7 @@
 <div *ngIf="momento == 3">
   <div class="ui statistic">
     <div class="value">
-      Oração preparatória
+      Oração preparató&shy;ria
     </div>
     <div class="label">
       Momento
