--- a/src/app/terco-rezar/terco-rezar.component.html
+++ b/src/app/terco-rezar/terco-rezar.component.html
@@ -1,6 +1,6 @@
 <div class="ui stackable center aligned two column grid segment" style="margin-top: -1%; background-color:mediumseagreen;color: white;">
   <div class="ui fifteen wide column" style="margin-top: 3%;margin-bottom: 2%;">
-    <label style="font-size: 80px">{{oracaoTitulo}}</label>
+    <label class="titulo">{{oracaoTitulo}}</label>
   </div>
   <div class="ui one wide column" style="margin-top: 3%;margin-bottom: 2%;">
     <div class="ui mini right floated buttons" style="opacity: 0.9;">
@@ -12,14 +12,16 @@
 </div>
 
 <div class="ui stackable center aligned two column grid">
-
   <div class="column" style="text-shadow:2px 2px 10px white;">
     <app-terco-details [pMomento]="momento" [pOracaoContador]="oracaoContador" [pOracaoTotal]="oracaoTotal"
       [pMisterio]="misterio">
     </app-terco-details>
   </div>
+</div>
 
-  <div class="column">
+<div class="ui stackable center aligned two column grid">
+
+  <div class="ten wide column">
     <h2 class="ui column">
       <div class="ui fluid raised card">
         <span class="content">
