--- a/src/app/terco-details/terco-details.component.html
+++ b/src/app/terco-details/terco-details.component.html
@@ -23,7 +23,7 @@
 <div *ngIf="momento == 3">
   <div class="ui statistic">
     <div class="value">
-      Oração preparató&shy;ria
+      Oração prepara&shy;tória
     </div>
     <div class="label">
       Momento
