--- a/src/app/terco-rezar/terco-rezar.component.css
+++ b/src/app/terco-rezar/terco-rezar.component.css
@@ -1,11 +1,11 @@
 @media screen and (min-width: 601px) {
   .titulo {
-    font-size: 500%;
+    font-size: 2.0rem;
   }
 }
 
 @media screen and (max-width: 600px) {
   .titulo {
-    font-size: 350%;
+    font-size: 1.5rem;
   }
 }
