--- a/src/app/terco-rezar/terco-rezar.component.css
+++ b/src/app/terco-rezar/terco-rezar.component.css
@@ -1,11 +1,11 @@
 @media screen and (min-width: 601px) {
-  .titulo {
-    font-size: 2.0rem;
-  }
+    .titulo {
+        font-size: 500%;
+    }
 }
 
 @media screen and (max-width: 600px) {
-  .titulo {
-    font-size: 1.5rem;
-  }
+    .titulo {
+        font-size: 350%;
+    }
 }
