desfoque foto de fundo

--- a/src/app/terco-sobre/terco-sobre.component.html
+++ b/src/app/terco-sobre/terco-sobre.component.html
@@ -27,5 +27,7 @@
             <br><a target="_blank" href="https://pt.wikipedia.org/wiki/Rosário_(catolicismo)">Saiba mais</a>
         </h4>
     </div>
+    <div class="row">
+        <app-footer></app-footer>
+    </div>
 </div>
-<app-footer> </app-footer>
