navbar com sticky e ajustes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
     <div class="item">
         <img src="./assets/img/tercoLogo.png" draggable="false" alt={{titulo}}>
     </div>
-    <a routerLink="/home" routerLinkActive="active" class="item">Início</a>
-    <a routerLink="/rezar" routerLinkActive="active" class="item">Rezar o terço</a>
+    <a routerLink="/home" routerLinkActive="active" title="Início" class="item">Início</a>
+    <a routerLink="/rezar" routerLinkActive="active" title="Rezar o terço" class="item">Rezar o terço</a>
     <div class="right menu">
-        <a class="item"><b>{{nomeTipoMisterio}}</b></a>
-        <a routerLink="/sobre" routerLinkActive="active" class="item">Sobre</a>
+        <a class="item" title="{{nomeTipoMisterio}}"><b>{{nomeTipoMisterio}}</b></a>
+        <a routerLink="/sobre" routerLinkActive="active" title="Sobre" class="item">Sobre</a>
     </div>
 </div>
 
